Use Boolean.valueOf() instead of new Boolean()
git-svn-id: svn://localhost/jahia/branches/JAHIA-6-0-BRANCH@1258 69c369ed-ed09-0410-a4a1-e19a46c23626